--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@mdi/font": "^7.0.96",
+    "axios": "^1.2.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue3-easy-data-table": "^1.5.22",
     "vuetify": "^3.0.4"
   },
   "devDependencies": {
+    "@mdi/font": "^7.1.96",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.2.0",
