--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^3.1.15",
+    "aws-amplify": "^5.2.0",
     "axios": "^1.2.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
